--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -41,7 +41,7 @@
                     <javafx.scene.text.Text text="Нет данных" />
                 </placeholder>
                 <columns>
-                  <TableColumn maxWidth="50.0" prefWidth="30.0" text="#">
+                  <TableColumn maxWidth="70.0" minWidth="30" prefWidth="40.0" text="#">
                       <cellValueFactory>
                           <NumberedCellValueFactory />
                       </cellValueFactory>
@@ -80,15 +80,15 @@
              <ProgressIndicator fx:id="readProgressIndicator" layoutX="549.0" layoutY="19.0" prefHeight="29.0" prefWidth="34.0" visible="false" AnchorPane.leftAnchor="549.0" AnchorPane.topAnchor="19.0" />
              <Label layoutX="24.0" layoutY="76.0" text="Отчет" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="76.0" />
             <ComboBox fx:id="reportComboBox" layoutX="73.0" layoutY="71.0" prefHeight="26.0" prefWidth="330.0" AnchorPane.leftAnchor="73.0" AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="71.0" />
-            <Button fx:id="reportButton" layoutX="434.0" layoutY="71.0" mnemonicParsing="false" onAction="#handleReportButtonAction" text="Сформировать" AnchorPane.rightAnchor="147.0" AnchorPane.topAnchor="71.0" />
-            <ProgressIndicator fx:id="reportProgressIndicator" layoutX="506.0" layoutY="70.0" prefHeight="29.0" prefWidth="34.0" visible="false" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="70.0" />
+            <Button fx:id="reportButton" layoutX="427.0" layoutY="72.0" mnemonicParsing="false" onAction="#handleReportButtonAction" text="Сформировать" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="72.0" />
+            <ProgressIndicator fx:id="reportProgressIndicator" visible="false" layoutX="549.0" layoutY="71.0" prefHeight="29.0" prefWidth="34.0" AnchorPane.rightAnchor="57.0" AnchorPane.topAnchor="71.0" />
             <GridPane hgap="4.0" layoutX="24.0" layoutY="391.0" prefHeight="90.0" prefWidth="590.0" vgap="4.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="26.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
                   <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="293.0" minWidth="10.0" prefWidth="187.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" />
                   <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="276.0" minWidth="10.0" prefWidth="228.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
